<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgLight">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="850dp"
        android:layout_height="230dp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="0dp">

        <VideoView
            android:id="@+id/backgroundVideo"
            android:layout_width="match_parent"
            android:layout_height="755dp"
            android:layout_weight="1"
            android:bottomRightRadius="400dp"
            android:bottomLeftRadius="50dp"
            />

    </LinearLayout>



    <!-- Fondo con curva -->
    <View
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/home_top_background" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:src="@drawable/movi"
        android:elevation="8dp" />

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDark"
        android:layout_below="@id/logoHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp" />

    <!-- Subtítulo -->
    <ImageView
        android:id="@+id/Moviflex"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:src="@drawable/moviflexx"
        android:elevation="2dp" />

    <TextView
        android:id="@+id/txtTitulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_subtitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/logoHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp" />


    <!-- Botón Siguiente -->
    <Button
        android:id="@+id/btnComenzar"
        android:layout_width="250dp"
        android:onClick="irLogin"
        android:layout_height="55dp"
        android:text="@string/home_next"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:elevation="6dp" />

</RelativeLayout>
